# SomaticProject

./: pyproject.toml
somatic_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
somatic_pipeline/config/: config_cnv.json  config_cnv_pon.json  config_snvind.json
